--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <hmtl>
     <head>
         <meta charset="UTF-8">
-        <title> PartnerLab2</title>
-        <h1>Partner Lab 2</h1>
+        <title> Paddy's Sports Guide</title>
+        <h1>Paddy's Sports Guide</h1>
     </head>
     <body>
+        <p>Select a Sport in one of the the drop down menus below.</p>
+        <select id="movieList" onchange="getItemSelected();"></select>
+        <p id="sportDescription" >Description: </p>
         <script src="script.js" defer></script>
     </body>
 </hmtl>
