--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <p>Select a Sport in one of the the drop down menus below.</p>
-        <select id="movieList" onchange="getItemSelected();"></select>
+        <select id="sportList" onchange="getItemSelected();"></select>
         <p id="sportDescription" >Description: </p>
         <script src="script.js" defer></script>
     </body>
